Fix ETL flow compilation issues